@@ -1,3 +1,5 @@
+* Check all fields when writing a sequence of records, values (CVE-2015-0861)
+
 Version 3.2.10 - 2015-11-09
 * Bug fixes (see mercurial logs for details)
 
